--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <html>
-  <p>-<a href="Affiche%20Novembre%20.pdf">Click here for Event Info</a></p>
+  <p>-<a href="Affiche%20Novembre%20.pdf"></a></p>
 </html>    
